--- a/JS-04-Arrays and Loops/index.html
+++ b/JS-04-Arrays and Loops/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <script defer src="JS-04 - Arrays and Loops.js"></script>
+     <script defer src="./JS-04-Arrays AndLoops.js"></script>
     <title>JS-04 - Arrays and Loops</title>
 </head>
 <body>
